Optimizing go backward button on small devices avoiding overlapping with article's content.

--- a/src/Sass/components/_goBackButton.scss
+++ b/src/Sass/components/_goBackButton.scss
@@ -19,3 +19,13 @@
       color: $primary_dark;
     }
   }
+
+@media (max-width: 500px) {
+  .goBackButton {
+    left:8px;
+    &::after {
+
+      font-size: 25px;
+    }
+  }
+}
